# Computer_Vision

Labs/: CV-final.py  epipolar_line.py  feature_points.py  projective_camera.py  projective_geometry.py  projective_geometry_lines.m  reconstructP.py  reconstructP_solution.py  robot.py  slam.py  slam_oop.py  slam_oop_velocity.py  svd.py  threeD_reconstruct.py
Labs/Lab01/: 01-Install-OpenCV.ipynb  CMakeLists.txt  main.cpp  test.py
Labs/Lab02/: .homography.py.swp  1.cpp  2.cpp  2.py  CMakeLists.txt  compute_homography.m  good_homography.txt  good_homography.xml  homo.py  homography.cpp  homography.py  homography.xml  homography.yml  homography2.xml  homography_OpenCV.cpp  homography_new.py  matt_robot_homography.xml  svd.cpp
Labs/Lab02/.ipynb_checkpoints/: 02-Homographies-checkpoint.ipynb
Labs/Lab03/: CMakeLists.txt  camera_calibration.cpp  camera_calibration.py  crop_distorted.py  finding_Fundamental_matrix.m  finding_Fundamental_matrix_8_point_method.m  grab_frames.cpp  grab_frames.py  homography.py  opticalFlow.cpp  rpi_camera_parameters.yml
Labs/Lab03/.ipynb_checkpoints/: 03-Cameras-checkpoint.ipynb
Labs/Lab03/Code/: camera_calibration2.py  homography.yml  homography_distorted.yml  rpi_camera_parameters.yml
Labs/Lab03/homography/: camera_calibration2.py  homography.py  homography.yml
Labs/Lab05/Code/Cpp/: CMakeLists.txt  main.cpp  opencv_tracking_example.cpp  stats.h  utils.h
Labs/Robust Object Detection using YOLO and AKAZE v2/: camera.py  detect_car.py  detect_car_v2.py  stats.py  tracker.py  tracker_distance.py  utils.py
(+16 files in other folders)
